Fix content overflow on squire editor

--- a/core/app/shell/src/themes/suite8/css/components/_squire-editor.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_squire-editor.scss
@@ -163,6 +163,7 @@
 
 
   .squire-editor-content {
+    max-width: calc(100vw - 39px);
     min-height: 200px;
     border-radius: .2rem;
 
